[package]
name = "git-auto-sync"
version = "0.1.0"
authors = ["liryanne <liryannesn@gmail.com>"]
edition = "2018"

[dependencies]
pathsearch = "0.2.0"
toml = "0.5.6"
serde = { version = "1.0.112", features = ["derive"] }
git2 = "0.13.6"
git2_credentials = "0.6.1"
eventual = "0.1.7"
tokio = { version = "0.2.21", features = ["full"]}
chrono = "0.4.13"
