[package]
name = "git-auto-sync"
version = "0.1.0"
authors = ["liryanne <liryannesn@gmail.com>"]
edition = "2018"

[dependencies]
pathsearch = "^0.2"
toml = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
eventual = "^0.1"

git2 = "^0.13"
git2_credentials = "^0.6"
tokio = { version = "^0.2", features = ["full"]}
chrono = "^0.4"
rodio = "^0.11"
